# SnowOwl

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md  tsconfig.json
apps/: main.cpp
apps/cli/: CMakeLists.txt  main_owl.cpp  main_owlctl.cpp
apps/cli/commands/: client_commands.cpp  client_commands.hpp  config_commands.cpp  config_commands.hpp  device_commands.cpp  device_commands.hpp  edge_commands.cpp  edge_commands.hpp  server_commands.cpp  server_commands.hpp
apps/cli/core/: cli_manager.cpp  cli_manager.hpp  cli_options.cpp  cli_options.hpp
apps/cli/managers/: client_manager.cpp  client_manager.hpp  config_manager.cpp  config_manager.hpp  device_manager.cpp  device_manager.hpp  edge_manager.cpp  edge_manager.hpp  server_manager.cpp  server_manager.hpp
apps/client/: CMakeLists.txt  main_client.cpp
apps/client/core/: client_api.cpp  client_api.hpp  client_config.cpp  client_config.hpp  client_state.cpp  client_state.hpp
apps/client/flutter/: flutter_client.cpp  flutter_client.hpp
apps/client/web/: web_client.cpp  web_client.hpp  web_client_launcher.cpp  web_client_launcher.hpp
apps/edge_device/: CMakeLists.txt  main_edge.cpp
apps/edge_device/core/: audio_processor.cpp  audio_processor.hpp  device_controller.cpp  device_controller.hpp  stream_capture.cpp  stream_capture.hpp  stream_forwarder.cpp  stream_forwarder.hpp
apps/edge_device/modules/config/: device_config.cpp  device_config.hpp  device_profile.cpp  device_profile.hpp
apps/edge_device/modules/monitoring/: health_monitor.cpp  health_monitor.hpp  resource_tracker.cpp  resource_tracker.hpp  system_probe.cpp  system_probe.hpp
apps/edge_device/modules/network/: connection_manager.cpp  connection_manager.hpp  forward_client.cpp  forward_client.hpp
apps/edge_device/modules/utils/: encoder_selector.cpp  encoder_selector.hpp  power_manager.cpp  power_manager.hpp
apps/server/: CMakeLists.txt  main_server.cpp
apps/server/core/output/: rtmp_output.cpp  rtmp_output.hpp  rtsp_output.cpp  rtsp_output.hpp
apps/server/core/streams/: capture_types.hpp  stream_dispatcher.cpp  stream_dispatcher.hpp  video_capture.cpp  video_capture.hpp  video_capture_manager.cpp  video_capture_manager.hpp  video_processor.cpp  video_processor.hpp
apps/server/modules/api/grpc/: grpc_server.cpp  grpc_server.hpp  snowowl.grpc.pb.cc  snowowl.grpc.pb.h  snowowl.pb.cc  snowowl.pb.h  snowowl.proto
apps/server/modules/api/rest/: rest_server.cpp  rest_server.hpp
apps/server/modules/api/unified/: api_server.cpp  api_server.hpp
apps/server/modules/api/websocket/: websocket_server.cpp  websocket_server.hpp
apps/server/modules/detection/: detector.hpp  unified_detector.cpp  unified_detector.hpp
apps/server/modules/discovery/: device_discovery.cpp  device_discovery.hpp  network_scanner.cpp  network_scanner.hpp
apps/server/modules/ingest/: stream_receiver.cpp  stream_receiver.hpp
apps/server/modules/logging/: server_logger.cpp  server_logger.hpp
apps/server/modules/network/: network_server.cpp  network_server.hpp
apps/server/modules/utils/: server_utils.cpp  server_utils.hpp
config/: camera_template.json  detection_config.json  file_template.json  frontend_config.json  rtmp_template.json  rtsp_template.json
frontend/: README.md
frontend/flutter/snowowl_app/: README.md  analysis_options.yaml  pubspec.yaml
frontend/flutter/snowowl_app/android/app/: build.gradle.kts
frontend/flutter/snowowl_app/android/app/src/main/: AndroidManifest.xml
frontend/flutter/snowowl_app/assets/html/: video_player.html
frontend/flutter/snowowl_app/ios/Runner/: Info.plist
frontend/flutter/snowowl_app/ios/Runner.xcodeproj/: project.pbxproj
frontend/flutter/snowowl_app/lib/: app.dart  main.dart
frontend/flutter/snowowl_app/lib/core/layout/: app_breakpoints.dart
frontend/flutter/snowowl_app/lib/core/router/: app_router.dart
frontend/flutter/snowowl_app/lib/features/alerts/application/: alerts_providers.dart
frontend/flutter/snowowl_app/lib/features/alerts/domain/: alert_models.dart  detection_models.dart
frontend/flutter/snowowl_app/lib/features/alerts/services/: alerts_service.dart
frontend/flutter/snowowl_app/lib/features/alerts/view/: alerts_page.dart
frontend/flutter/snowowl_app/lib/features/shared/: video_player_widget.dart
frontend/flutter/snowowl_app/lib/features/streams/: README.md
frontend/flutter/snowowl_app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb  l10n.dart
frontend/flutter/snowowl_app/lib/theme/: app_colors.dart  app_scroll_behavior.dart  app_theme.dart
frontend/flutter/snowowl_app/lib/widgets/: glass_panel.dart
frontend/flutter/snowowl_app/linux/: CMakeLists.txt
frontend/flutter/snowowl_app/linux/runner/: my_application.cc
frontend/flutter/snowowl_app/macos/Runner.xcodeproj/: project.pbxproj
frontend/flutter/snowowl_app/macos/Runner/Configs/: AppInfo.xcconfig
frontend/flutter/snowowl_app/web/: index.html  manifest.json
frontend/flutter/snowowl_app/windows/: CMakeLists.txt
frontend/flutter/snowowl_app/windows/runner/: Runner.rc  main.cpp
frontend/web/: README.md
include/snow_owl/: plugin_interface.h  version.h  version.h.in
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/config/: config_manager.cpp  config_manager.hpp  device_registry.cpp
libs/common/utils/: app_paths.cpp  app_paths.hpp
libs/config/: device_registry.cpp  device_registry.hpp
libs/database/: device_registry.cpp  device_registry.hpp
libs/detection/: detection_types.hpp
libs/plugin/: plugin_manager.cpp  plugin_manager.hpp
libs/protocol/: message_types.hpp
libs/utils/: app_paths.cpp  app_paths.hpp  health_monitor.cpp  health_monitor.hpp  resource_tracker.cpp  resource_tracker.hpp  system_probe.cpp  system_probe.hpp
plugins/: README.md
plugins/example_audio_analysis_plugin/: manifest.json
plugins/example_home_monitoring_plugin/: manifest.json
plugins/example_industrial_plugin/: CMakeLists.txt  README.md  manifest.json
plugins/example_industrial_plugin/src/: industrial_safety_plugin.cpp
(+46 files in other folders)
